feat: integrar ruta para obtener un esquema/jerarquia de carpetas
